Postawilem nowego windowsa -> nowy dekstop id -> zmiana podłączenia

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-ESV62HJ\\SQLEXPRESS;Database=BDwAI_BugTrackSys;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "DefaultConnection": "Server=DESKTOP-HEAT3N\\SQLEXPRESS;Database=BDwAI_BugTrackSys;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
